# raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  color.hpp  main.cpp  ray.hpp  vec3.hpp
images/: .gitignore
include/raytracer/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  constant_medium.hpp  hittable.hpp  hittable_list.hpp  image.hpp  interval.hpp  material.hpp  perlin.hpp  quad.hpp  ray.hpp  rtw_std_image.hpp  scenes.hpp  sphere.hpp  texture.hpp  triangle.hpp  triangle_mesh.hpp  utils.hpp  vec3.hpp
models/: .gitignore
scripts/: build.bat  build.sh  clean.bat  clean.sh
src/: aabb.cpp  bvh.cpp  camera.cpp  camera.hpp  color.cpp  color.hpp  common.hpp  constant_medium.cpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.h  interval.hpp  main.cpp  material.cpp  perlin.cpp  quad.cpp  rtw_std_image.cpp  scenes.cpp  sphere.cpp  sphere.hpp  texture.cpp  triangle.cpp  triangle_mesh.cpp  utils.hpp  vec3.hpp
